# Matrix-Graphs-Searcher

./: CMakeLists.txt  README.md  SearchSolution.cpp  SearchSolution.h  graphs.txt  main.cpp  makefile
Algorithms/: AStar.h  BFS.cpp  BFS.h  BestFirstSearch.h  DFS.h  Searcher.h  Solver.h
CacheManager/: CacheManager.h  FileCacheManager.h  MatrixFileCacheManager.cpp  MatrixFileCacheManager.h
ClientHandler/: ClientHandler.h  MyClientHandler.h  MyTestClientHandler.cpp  MyTestClientHandler.h
Communication/: MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  Server.h
Solvable/: Matrix.cpp  Matrix.h  Searchable.h  StringReverser.h  TestMatrices.h
Utils/: CostComparator.h  Heuristic.h  ManhattanDistance.h  Position.h  State.h
